--- a/style.css
+++ b/style.css
@@ -47,12 +47,48 @@ body{
   list-style: none;
   display: flex;
   gap: 4rem;
+
 }
-.nav__link--arrow{
-  display: flex;
-  gap: 0.8rem;
-  align-items: center;
+.nav__submenu {
+  position: relative;
 }
+
+.submenu {
+  position: absolute;
+  transform: translateY(-100%);
+  height: 0;
+  overflow: hidden;
+  top: 100%;
+  left: 0;
+  z-index: 1;
+  transition: all 1s ease;
+}
+
+.nav__submenu:hover .submenu {
+  height: auto;
+  transform: translateY(0);
+}
+
+.submenu li:hover {
+  background-color: #ccc;
+}
+
+.submenu a {
+  padding: 10px;
+  color: #333;
+  text-decoration: none;
+}
+
+.submenu a:hover {
+  background-color: #555;
+  color: #fff;
+}
+
+
+.nav__link--submenu span{
+  margin-right: 0.8rem;
+}
+
 
 .nav__link:link,
 .nav__link:visited {
@@ -81,6 +117,9 @@ body{
 .register:hover{
   border: 2px solid var(--black);
 }
+
+
+
 /* ********************** */
 /* ***  HERO SECTION  *** */
 /* ********************** */
@@ -143,7 +182,6 @@ body{
 
 .feature-in{
   margin-top: auto;
-  /* width: 90%; */
   display: flex;
   gap: 4rem;
   align-items: center;
