--- a/style.css
+++ b/style.css
@@ -10,6 +10,7 @@
 }
 html {
   font-size: 62.5%;
+  overflow-x: hidden;
 }
 body {
   font-family: 'Epilogue', sans-serif;
@@ -39,7 +40,7 @@ body {
 }
 
 .logo {
-  height: 2.7rem;
+  height: 27px;
 }
 
 .nav__list {
@@ -92,7 +93,7 @@ body {
 
 .submenu__link:link,
 .submenu__link:visited {
-  font-size: 1.4rem;
+  font-size: 14px;
   color: var(--text-color);
   font-family: inherit;
   text-decoration: none;
@@ -113,7 +114,7 @@ body {
 
 .nav__link:link,
 .nav__link:visited {
-  font-size: 1.4rem;
+  font-size: 14px;
   font-family: inherit;
   font-weight: 500;
   color: var(--text-color);
@@ -146,14 +147,15 @@ body {
 
 .hero-section {
   margin-top: 4rem;
+  padding: 0 2rem;
   display: grid;
-  grid-template-columns: 1fr auto;
+  grid-template-columns: 4fr 3fr;
   column-gap: 14rem;
   align-content: space-between;
 }
 
 .hero-img {
-  width: 480px;
+  width: 48rem;
 }
 
 .heading__primary {
@@ -205,4 +207,11 @@ body {
   display: flex;
   gap: 4rem;
   align-items: center;
+  justify-content: center;
+  flex-wrap: wrap;
+}
+
+.feature-in img {
+  width: 100%;
+  max-width: 8.8rem;
 }
